[package]
name = "heradoc"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.4.0"
str-concat = "0.2.0"
structopt = "0.2.10"
void = "1.0.2"
boolinator = "2.4"
tempdir = "0.3.7"
typed-arena = "1.4.1"
url = "1.7.1"
reqwest = "0.9.2"
serde = { version = "1.0.89", features = ["derive"] }
toml = "0.5.0"
log = "0.4.5"
env_logger = "0.5.13"
mime = "0.3"
sha2 = "0.8"
isolang = "0.2"
strum = "0.11.0"
strum_macros = "0.11.0"
regex = "1.1.0"
lazy_static = "1.2.0"
single = "1.0.0"
quoted-string = "0.6.0"
codespan = { git = "https://github.com/oberien/codespan", rev = "dc7b13739165fc58721415ce3120d05cf117ca81" }
codespan-reporting = { git = "https://github.com/oberien/codespan", rev = "dc7b13739165fc58721415ce3120d05cf117ca81" }
backtrace = "0.3.14"
enum-kinds = "0.4.1"
lexical = "5.0.0"
svgbob = "0.5.0-alpha.5"
itertools = "0.9.0"
pathdiff = "0.2.0"

[target.'cfg(not(windows))'.dependencies]
librsvg = { git="https://gitlab.gnome.org/GNOME/librsvg", rev="6ecab568" }
cairo-rs = { version = "0.7.0", features = ["pdf"] }

[profile.release]
debug = true

[profile.bench]
debug = true
