[package]
name = "heradoc"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.9.2"
str-concat = "0.2.0"
structopt = "0.2.10"
void = "1.0.2"
boolinator = "2.4"
tempdir = "0.3.7"
typed-arena = "2.0.2"
url = "2.3.1"
#reqwest = "0.9.2"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.89", features = ["derive"] }
toml = "0.7.1"
log = "0.4.5"
env_logger = "0.10.0"
mime = "0.3"
sha2 = "0.10.6"
isolang = "2.2.0"
strum = "0.11.0"
strum_macros = "0.11.0"
regex = "1.1.0"
lazy_static = "1.2.0"
single = "1.0.0"
quoted-string = "0.6.0"
codespan = { git = "https://github.com/oberien/codespan", rev = "dc7b13739165fc58721415ce3120d05cf117ca81" }
codespan-reporting = { git = "https://github.com/oberien/codespan", rev = "dc7b13739165fc58721415ce3120d05cf117ca81" }
backtrace = "0.3.14"
enum-kinds = "0.4.1"
lexical = "6.1.1"
svgbob = "0.6.7"
itertools = "0.10.5"

[target.'cfg(not(windows))'.dependencies]
librsvg = { git="https://gitlab.gnome.org/GNOME/librsvg", rev="6ecab568" }
cairo-rs = { version = "0.7.0", features = ["pdf"] }

[profile.release]
debug = true

[profile.bench]
debug = true
